[project]
name = "social_filter"
version = "0.1.0"
description = "A library for filtering social media posts using Claude"
authors = [
    {name = "Joey Bream"}
]
dependencies = [
    "anthropic>=0.30.0"
]
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
